# noah

./: .detoxrc.js  .env.server.example  .gitignore  .rooignore  AGENTS.md  App integrity.md  App.tsx  AppPush.tsx  Cargo.toml  Dockerfile  LICENSE  PRIVACY.md  README.md  app.config.ts  app.json  bacon.toml  eas.json  email.md  encrypted_backup_architecture.md  eslint.config.js  flake.nix  fly.toml  global.css  index.ts  justfile  package.json  start.md  tailwind.config.js
.github/workflows/: android-mainnet-artifacts.yml  build.yml  client-telegram.yml  client.yml  fly-mainnet-deploy.yml  ios-device-build.yml  ios-telegram.yml  main.yml  noah-build-debug-android.yml.bak  noah-build-release-ios.yml  (+9 more)
.husky/: pre-commit
.zed/: settings.json
android/: build.gradle  gradle.properties  settings.gradle
app/: +not-found.tsx  _layout.tsx  index.tsx
client/: .env.example  App.tsx  EXPO_ROUTER_MIGRATION.md  EXPO_ROUTER_QUICK_START.md  MIGRATION_COMPLETE.md  app.config.ts  assets.d.ts  babel.config.js  eas.json  eslint-config-expo.d.ts  eslint.config.js  global.css  index.ts  metro.config.js  package.json  tailwind.config.js  tsconfig.json
client/nitromodules/noah-tools/android/: CMakeLists.txt  build.gradle
client/nitromodules/noah-tools/android/src/main/: AndroidManifest.xml
client/nitromodules/noah-tools/android/src/main/assets/: noah_bark_config.json
client/nitromodules/noah-tools/android/src/main/java/com/margelo/nitro/noahtools/: NoahPushService.kt  NoahTools.kt  NoahToolsBackup.kt  NoahToolsHttp.kt  NoahToolsLogging.kt  NoahToolsPackage.kt  NoahToolsUnifiedPush.kt  NoahUnifiedPushReceiver.kt
client/nitromodules/noah-tools/android/src/main/java/com/margelo/nitro/noahtools/audio/: NoahToolsAudio.kt
docs/: android-widgets-setup.md  ios-widgets.md  jwt_auth_migration_plan.md  notification_coordinator.md  unified_push.md  widgets.md
e2e/: create-wallet.yaml  jest.config.js  starter.test.js
fly/: mainnet-setup.md  mainnet.fly.toml  signet.postgres.toml
infra/: .gitignore  Dockerfile.railway  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ios/: Podfile
nitromodules/: README.md
patches/: expo-modules-autolinking@3.0.15.patch  expo-modules-autolinking@55.0.2.patch  react-native-fs-turbo+0.3.6.patch  react-native-fs-turbo@0.3.6.patch  react-native-worklets-core@1.6.2.patch  uniwind@1.2.6.patch
scripts/: .env.regtest  README.md  ark-dev.sh  bump_client_version.ts  captaind.toml  cln.Dockerfile  cln_start.sh  create_local_properties.sh  create_sentry_properties.sh  decrypt_backup.js  docker-compose.yml  download_ark_binaries.js  server-config.toml
server/: Cargo.toml  config.toml.example  test.db
server/migrations/: 0001_init.sql  0002_add_ark_address.sql  0003_add_device_attestations.sql  0003_add_email_verification.sql  0004_add_job_status_prune_index.sql  0005_add_last_login.sql  0006_drop_offboarding.sql  0007_drop_email_unique_index.sql  0008_ln_address_autocomplete.sql  0009_job_status_pending_and_drop_notification_tracking.sql  0010_add_mailbox_authorizations.sql  0011_add_mailbox_worker_state.sql  0012_add_mailbox_worker_leases.sql
server/src/: api_v0.rs  app_middleware.rs  ark_client.rs  auth.rs  config.rs  config_watcher.rs  constants.rs  cron.rs  email_client.rs  errors.rs  gated_api_v0.rs  lib.rs  mailbox_worker.rs  main.rs  migrations.rs  notification_coordinator.rs  private_api_v0.rs  public_api_v0.rs  push.rs  rate_limit.rs  s3_client.rs  trace_layer.rs  types.rs  utils.rs  wide_event.rs
server/src/attestation/: android.rs  ios.rs  mod.rs
server/src/cache/: email_verification_store.rs  invoice_store.rs  k1_store.rs  maintenance_store.rs  mod.rs  redis_client.rs
server/src/db/: attestation_repo.rs  backup_repo.rs  device_repo.rs  heartbeat_repo.rs  job_status_repo.rs  mailbox_authorization_repo.rs  migrations.rs  mod.rs  notification_tracking_repo.rs  offboarding_repo.rs  push_token_repo.rs  user_repo.rs
server/src/routes/: app_middleware.rs  gated_api_v0.rs  mod.rs  public_api_v0.rs
server/src/tests/: common.rs  coordinator_tests.rs  email_verification_tests.rs  gated_api_v0.rs  gated_auth_tests.rs  gated_backup_tests.rs  gated_error_tests.rs  gated_heartbeat_tests.rs  gated_invoice_tests.rs  gated_suggestions_tests.rs  gated_user_tests.rs  mod.rs  public_api_v0.rs
server/src/v0/: api_v0.rs  mod.rs
src/: AppServices.tsx  Navigators.tsx  config.ts  constants.ts
(+311 files in other folders)
