[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
anyhow = "1.0.100"
arc-swap = "1.7.1"
notify = "8.2.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tower_governor = "0.8.0"
governor = "0.10.1"
serde = { version = "1.0.225", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.2"
bitcoin = "0.32.7"
expo_push_notification_client = "1.0.6"
thiserror = "2.0.17"
dashmap = "6.1.0"
tokio-cron-scheduler = { version = "0.15.0", features = ["english"] }
serde_json = "1.0.145"
random_word = { version = "0.5.0", features = ["en"] }
futures-util = "0.3.30"
bark-server-rpc = { git = "https://gitlab.com/ark-bitcoin/bark", tag = "server-0.1.0-beta.2" }

async-trait = "0.1.80"
http-body-util = "0.1.1"
validator = { version = "0.20.0", features = ["derive"] }
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
ts-rs = "11.0.1"
sentry = { version = "0.43.0", features = ["tracing", "logs", "tower-axum-matched-path"] }
tower = "0.5.2"
uuid = "1.18.1"
toml = "0.9.7"
semver = "1.0.27"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "migrate"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["full"] }
tracing-test = "0.2.5"
once_cell = "1.19.0"
